--- a/ansible/roles/amq-online-app/templates/messaging_user.j2
+++ b/ansible/roles/amq-online-app/templates/messaging_user.j2
@@ -2,7 +2,7 @@ apiVersion: user.enmasse.io/v1beta1
 kind: MessagingUser
 metadata:
   name: {{ _amqonline_app_address_space_name }}.{{ _amqonline_app_user_username }}
-  namespace: {{ _amqonline_infra_proj }}
+  namespace: {{ _amqonline_app_proj }}
 spec:
   username: {{ _amqonline_app_user_username }}
   authentication:
